--- a/transparency.html
+++ b/transparency.html
@@ -10,6 +10,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Zen+Maru+Gothic:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <button class="hamburger-menu" id="hamburgerMenu" aria-label="メニューを開く">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+
+    <nav class="global-nav" id="globalNav">
+        <ul>
+            <li><a href="https://fumifum1.github.io/profile/index.html">profile</a></li>
+            <li><a href="https://fumifum1.github.io/profile/game.html">game</a></li>
+            <li><a href="https://fumifum1.github.io/profile/music.html">music</a></li>
+            <li><a href="https://fumifum1.github.io/profile/other.html">other</a></li>
+        </ul>
+    </nav>
+    <div class="nav-overlay" id="navOverlay"></div>
+
     <header>
         <h1>Transparency</h1>
         <p>画像から指定した色とその近似色を取り除き、背景が透明な画像を簡単に作成できます。</p>
@@ -65,5 +81,6 @@
     </main>
 
     <script src="main.js"></script>
+    <script src="menu.js"></script>
 </body>
 </html>
