set;リンク修正

--- a/fast_resizer.html
+++ b/fast_resizer.html
@@ -23,10 +23,10 @@
     </button>
     <nav class="global-nav" id="globalNav">
         <ul>
-            <li><a href="https://fumifum1.github.io/profile/index.html">profile</a></li>
-            <li><a href="https://fumifum1.github.io/profile/game.html">game</a></li>
-            <li><a href="https://fumifum1.github.io/profile/music.html">music</a></li>
-            <li><a href="https://fumifum1.github.io/profile/other.html">other</a></li>
+            <li><a href="https://fumifum1.github.io/main/index.html">profile</a></li>
+            <li><a href="https://fumifum1.github.io/main/game.html">game</a></li>
+            <li><a href="https://fumifum1.github.io/main/music.html">music</a></li>
+            <li><a href="https://fumifum1.github.io/main/other.html">other</a></li>
         </ul>
     </nav>
     <div class="nav-overlay" id="navOverlay"></div>
