set;フッター位置修正

--- a/cropper.html
+++ b/cropper.html
@@ -83,8 +83,8 @@
     <p id="message-text"></p>
     <button onclick="document.getElementById('message-box').style.display='none'">OK</button>
 </div>
-    <footer>
-        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.0.0
+    <footer style="width: 100%; text-align: center; padding: 20px 0; margin-top: 20px; clear: both;">
+        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.0.1
     </footer>
 <script src="cropper.js"></script>
 <script src="common.js"></script>
