set;トリミング修正、各リンク修正

--- a/menu.html
+++ b/menu.html
@@ -11,23 +11,22 @@
     <link rel="stylesheet" href="common.css">
 </head>
 <body>
-    <header>
-        <div class="hamburger-menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-        <nav class="nav-menu">
-            <ul>
+    <!-- Hamburger Menu -->
+    <button class="hamburger-menu" id="hamburgerMenu" aria-label="メニューを開く">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    <nav class="nav-menu" id="globalNav">
+        <ul>
                 <li><a href="menu.html">HOME</a></li>
                 <li><a href="transparency.html">Image背景透明化</a></li>
                 <li><a href="fast_resizer.html">Imageサイズ変更</a></li>
                 <li><a href="cropper.html">Imageトリミング</a></li>
                 <hr>
                 <li><a href="https://fumifum1.github.io/main/index.html">Creator</a></li>
-            </ul>
-        </nav>
-    </header>
+        </ul>
+    </nav>
     <div class="overlay"></div>
 
     <div class="container">
@@ -48,7 +47,7 @@
     </div>
 
     <footer>
-        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.0.0
+        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.1.0
     </footer>
 
     <script src="common.js"></script>
