--- a/fast_resizer.html
+++ b/fast_resizer.html
@@ -21,22 +21,21 @@
 <body>
 
     <!-- Hamburger Menu -->
-    <button class="hamburger-menu" aria-label="メニューを開閉する">
+    <button class="hamburger-menu" id="hamburgerMenu" aria-label="メニューを開く">
         <span></span>
         <span></span>
         <span></span>
     </button>
-    <nav class="nav-menu">
+    <nav class="nav-menu" id="globalNav">
         <ul>
-            <li><a href="menu.html">HOME</a></li>
-            <li><a href="transparency.html">Image背景透明化</a></li>
-            <li><a href="fast_resizer.html">Imageサイズ変更</a></li>
-            <li><a href="cropper.html">Imageトリミング</a></li>
-            <li class="nav-menu__divider" aria-hidden="true"></li>
-            <li><a href="https://fumifum1.github.io/main/index.html">Creator</a></li>
+                <li><a href="menu.html">HOME</a></li>
+                <li><a href="transparency.html">Image背景透明化</a></li>
+                <li><a href="fast_resizer.html">Imageサイズ変更</a></li>
+                <li><a href="cropper.html">Imageトリミング</a></li>
+                <hr>
+                <li><a href="https://fumifum1.github.io/main/index.html">Creator</a></li>
         </ul>
     </nav>
-    <!-- Overlay for background -->
     <div class="overlay"></div>
 
     <div class="container">
@@ -84,7 +83,7 @@
         </main>
     </div>
     <footer>
-        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.0.0
+        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.1.0
     </footer>
 </body>
 </html>
