--- a/transparency.html
+++ b/transparency.html
@@ -12,19 +12,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
 </head>
 <body>
-    <button class="hamburger-menu" aria-label="メニューを開閉する">
+    <!-- Hamburger Menu -->
+    <button class="hamburger-menu" id="hamburgerMenu" aria-label="メニューを開く">
         <span></span>
         <span></span>
         <span></span>
     </button>
-    <nav class="nav-menu">
+    <nav class="nav-menu" id="globalNav">
         <ul>
-            <li><a href="menu.html">HOME</a></li>
-            <li><a href="transparency.html">Image背景透明化</a></li>
-            <li><a href="fast_resizer.html">Imageサイズ変更</a></li>
-            <li><a href="cropper.html">Imageトリミング</a></li>
-            <li class="nav-menu__divider" aria-hidden="true"></li>
-            <li><a href="https://fumifum1.github.io/main/index.html">Creator</a></li>
+                <li><a href="menu.html">HOME</a></li>
+                <li><a href="transparency.html">Image背景透明化</a></li>
+                <li><a href="fast_resizer.html">Imageサイズ変更</a></li>
+                <li><a href="cropper.html">Imageトリミング</a></li>
+                <hr>
+                <li><a href="https://fumifum1.github.io/main/index.html">Creator</a></li>
         </ul>
     </nav>
     <div class="overlay"></div>
@@ -85,7 +86,7 @@
         </main>
     </div>
     <footer>
-        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.0.0
+        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.1.0
     </footer>
     <script src="common.js"></script>
     <script src="transparency.js"></script>
