--- a/cropper.html
+++ b/cropper.html
@@ -35,26 +35,31 @@
         <h1>Cropper</h1>
         <p>画像をアップロードして、好きなサイズと形で切り抜きましょう。</p>
 
-        <div class="controls">
-            <div class="file-input-container">
+        <!-- The controls are wrapped in a flex container that stacks items vertically and centers them -->
+        <div class="controls" style="display: flex; flex-direction: column; align-items: center; gap: 15px;">
+            <!-- File selection -->
+            <div class="file-input-container" style="display: flex; flex-direction: column; align-items: center; gap: 8px;">
                 <!-- The label acts as a custom-styled button -->
                 <label for="image-upload" class="btn">画像を選択</label>
                 <input type="file" id="image-upload">
                 <span id="file-name"></span>
             </div>
 
-            <div class="input-group">
-                <label for="width-input">幅 (px)</label>
-                <input type="number" id="width-input" value="300">
+            <!-- Width and Height inputs, grouped to appear on the same line -->
+            <div style="display: flex; justify-content: center;">
+                <div class="input-group">
+                    <label for="size-input">サイズ (px)</label>
+                    <input type="number" id="size-input" value="300">
+                </div>
             </div>
 
-            <div class="input-group">
-                <label for="height-input">高さ (px)</label>
-                <input type="number" id="height-input" value="300">
+            <!-- Shape selection buttons, grouped to appear on the same line -->
+            <div style="display: flex; gap: 10px;">
+                <button id="square-btn" class="btn active">四角型</button>
+                <button id="circle-btn" class="btn">丸形</button>
             </div>
 
-            <button id="square-btn" class="btn active">四角型</button>
-            <button id="circle-btn" class="btn">丸形</button>
+            <!-- Crop action button -->
             <button id="cropButton" class="btn">トリミング処理</button>
         </div>
 
