--- a/cropper.html
+++ b/cropper.html
@@ -36,9 +36,9 @@
         <p>画像をアップロードして、好きなサイズと形で切り抜きましょう。</p>
 
         <!-- The controls are wrapped in a flex container that stacks items vertically and centers them -->
-        <div class="controls" style="display: flex; flex-direction: column; align-items: center; gap: 15px;">
+        <div class="controls">
             <!-- File selection -->
-            <div class="file-input-container" style="display: flex; flex-direction: column; align-items: center; gap: 8px;">
+            <div class="file-input-container">
                 <!-- The label acts as a custom-styled button -->
                 <label for="image-upload" class="btn">画像を選択</label>
                 <input type="file" id="image-upload">
@@ -46,7 +46,7 @@
             </div>
 
             <!-- Width and Height inputs, grouped to appear on the same line -->
-            <div style="display: flex; justify-content: center;">
+            <div class="controls-group">
                 <div class="input-group">
                     <label for="size-input">サイズ (px)</label>
                     <input type="number" id="size-input" value="300">
@@ -54,7 +54,7 @@
             </div>
 
             <!-- Shape selection buttons, grouped to appear on the same line -->
-            <div style="display: flex; gap: 10px;">
+            <div class="controls-group">
                 <button id="square-btn" class="btn active">四角型</button>
                 <button id="circle-btn" class="btn">丸形</button>
             </div>
