--- a/cropper.html
+++ b/cropper.html
@@ -7,6 +7,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="cropper.css">
     <link rel="stylesheet" href="common.css">
+    <style>
+        /*
+         * スマートフォンで画像をアップロードした後にスクロールできなくなる問題の修正。
+         * JavaScriptによってbodyにインラインスタイルが適用されても、!importantで上書きしてスクロールを確保します。
+        */
+        body {
+            overflow-y: auto !important;
+        }
+    </style>
 </head>
 <body>
     <!-- Hamburger Menu -->
@@ -87,7 +96,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.2.1
+        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.3.1
     </footer>
     <script src="common.js"></script>
     <script src="cropper.js"></script>
