--- a/cropper.html
+++ b/cropper.html
@@ -15,6 +15,8 @@
         html, body {
             overflow-y: auto !important;
             height: auto !important;
+            /* ライブラリがbody等の位置を固定(position: fixed)してスクロールを無効化するのを防ぎます */
+            position: static !important;
         }
     </style>
 </head>
@@ -97,7 +99,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.3.1
+        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.3.2
     </footer>
     <script src="common.js"></script>
     <script src="cropper.js"></script>
