--- a/transparency.html
+++ b/transparency.html
@@ -40,7 +40,7 @@
             <section id="uploadSection" class="section-box">
                 <h2>1. 画像をアップロード</h2>
                 <input type="file" id="imageInput" class="file-input" accept="image/*">
-                <label for="imageInput" class="btn">画像をアップロード</label>
+                <label for="imageInput" class="upload-btn">画像をアップロード</label>
             </section>
 
             <section id="processingSection" class="section-box">
