--- a/fast_resizer.html
+++ b/fast_resizer.html
@@ -6,8 +6,8 @@
     <title>Fast Resizer</title>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/fumifum1/main/main/jpg/ico.ico">
     <!-- Link to the main stylesheet -->
-    <link rel="stylesheet" href="fast_resizer.css">
     <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="fast_resizer.css">
     <!-- Link to Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
             <section class="section-box">
                 <p>画像を選択してください。※複数も可</p>
                 <input type="file" id="imageInput" class="file-input" accept="image/*" multiple>
-                <label for="imageInput" class="btn">画像を選択</label>
+                <label for="imageInput" class="upload-btn">画像をアップロード</label>
             </section>
 
             <section id="resizeSection" class="section-box" style="display: none;">
