set;ver2.2.1、QRコード作成アプリ追加、メニュー内に画像⇔PDF追加

--- a/fast_resizer.html
+++ b/fast_resizer.html
@@ -32,6 +32,7 @@
                 <li><a href="transparency.html">Image背景透明化</a></li>
                 <li><a href="fast_resizer.html">Imageサイズ変更</a></li>
                 <li><a href="cropper.html">Imageトリミング</a></li>
+                <li><a href="https://fumifum1.github.io/pdf_tool/pdf_jpg.html">Image⇒PDF変換</a></li>
                 <hr>
                 <li><a href="https://fumifum1.github.io/main/index.html">Creator</a></li>
         </ul>
@@ -83,7 +84,7 @@
         </main>
     </div>
     <footer>
-        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.2.0
+        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.2.1
     </footer>
 </body>
 </html>
