--- a/menu.html
+++ b/menu.html
@@ -23,6 +23,7 @@
                 <li><a href="transparency.html">Image背景透明化</a></li>
                 <li><a href="fast_resizer.html">Imageサイズ変更</a></li>
                 <li><a href="cropper.html">Imageトリミング</a></li>
+                <li><a href="https://fumifum1.github.io/pdf_tool/pdf_jpg.html">Image⇒PDF変換</a></li>
                 <hr>
                 <li><a href="https://fumifum1.github.io/main/index.html">Creator</a></li>
         </ul>
@@ -43,11 +44,14 @@
             <a href="cropper.html" class="file-label-button">
                 Imageトリミング
             </a>
+            <a href="https://fumifum1.github.io/pdf_tool/pdf_jpg.html" class="file-label-button">
+                Image⇒PDF変換
+            </a>
         </div>
     </div>
 
     <footer>
-        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.2.0
+        &copy; 2025 Synapse Creations. Aug.ShapeShift_ver2.2.1
     </footer>
 
     <script src="common.js"></script>
