--- a/cropper.html
+++ b/cropper.html
@@ -25,6 +25,7 @@
                 <li><a href="transparency.html">Image背景透明化</a></li>
                 <li><a href="fast_resizer.html">Imageサイズ変更</a></li>
                 <li><a href="cropper.html">Imageトリミング</a></li>
+                <li><a href="https://fumifum1.github.io/pdf_tool/pdf_jpg.html">Image⇒PDF変換</a></li>
                 <hr>
                 <li><a href="https://fumifum1.github.io/main/index.html">Creator</a></li>
         </ul>
@@ -99,7 +100,7 @@
     <script src="cropper.js"></script>
     <script src="common.js"></script>
     <footer>
-        &copy; 2025 Synapse Creations. Sep.ShapeShifT_ver2.2.0
+        &copy; 2025 Synapse Creations. Sep.ShapeShifT_ver2.2.1
     </footer>
 </body>
 </html>
